fixed overflow issue on div boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,7 @@ a:hover {
   padding: 15px;
   border: 1px solid lightgray;
   margin-bottom: 10px;
+  overflow: auto;
 }
 
 .flex-child p, .flex-child h4 {
